Remove outdated dependencies

--- a/src/gex-login.html
+++ b/src/gex-login.html
@@ -5,9 +5,10 @@
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
 
+<link rel="import" href="global-styles.html">
 <link rel="import" href="shared-styles.html">
 
-<link rel="import" href="./elements/ra-logo.html">
+<link rel="import" href="../bower_components/wc-periodic-logo/wc-periodic-logo.html">
 <link rel="import" href="../bower_components/chips-api/chips-api.html">
 
 <dom-module id="gex-login">
@@ -24,6 +25,7 @@
         bottom: 0;
         background-color: var(--dark-primary-color);
       }
+
       .container{
         color: #ffffff;
         max-width: 800px;
@@ -45,16 +47,28 @@
             -ms-flex-pack: center;
                 justify-content: center;
       }
+
       .title {
         text-align: center;
         font-size: 24px;
+        font-weight: light;
         color: #ffffff;
         padding: 10px;
       }
+
+      .label {
+        margin-top: 10px;
+      }
+      
+      wc-periodic-logo {
+        --accent-color: #2196f3;
+      }
+
       paper-input {
         --paper-input-container-color: var(--text-primary-color);
         --paper-input-container-input-color: var(--text-primary-color);
       }
+
       paper-button#login {
         margin-top: 32px;
         background: var(--accent-color);
@@ -74,9 +88,11 @@
         --paper-spinner-layer-3-color: white;
         --paper-spinner-layer-4-color: white;
       }
-      #loginSpinner{
+
+      #loginSpinner {
         display: none;
       }
+      
       a {
         color: var(--accent-color);
       }
@@ -91,8 +107,15 @@
 
         <section>
           <div class="title">
-            <ra-logo size="big"></ra-logo>
-            Radiology Viewer</div>
+            <wc-periodic-logo
+              element="Ra"
+              size="big"
+              number="1">
+            </wc-periodic-logo>
+            <div class="label">
+              Radiology Viewer
+            </div>
+          </div>
         </section>
 
         <section>
