--- a/src/rav-view404.html
+++ b/src/rav-view404.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 
-<dom-module id="gex-view404">
+<dom-module id="rav-view404">
   <template>
     <style>
       :host {
@@ -24,9 +24,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
-    class GEXView404 extends Polymer.Element {
+    class RAVView404 extends Polymer.Element {
       static get is() {
-        return 'gex-view404';
+        return 'rav-view404';
       }
 
       static get properties() {
@@ -38,6 +38,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     }
 
-    window.customElements.define(GEXView404.is, GEXView404);
+    window.customElements.define(RAVView404.is, RAVView404);
   </script>
 </dom-module>
