--- a/src/rav-viewer.html
+++ b/src/rav-viewer.html
@@ -22,14 +22,14 @@
 <link rel="import" href="../bower_components/wc-viewer-2d/wc-viewer-2d.html">
 
 <!-- Local components  -->
-<link rel="import" href="elements/gex-panel.html">
-<link rel="import" href="elements/gex-layout-manager.html">
+<link rel="import" href="elements/rav-panel.html">
+<link rel="import" href="elements/rav-layout-manager.html">
 <link rel="import" href="elements/image-controls.html">
 <link rel="import" href="elements/viewer-global-controls.html">
 
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="gex-viewer">
+<dom-module id="rav-viewer">
   <template>
     <style include="shared-styles">
       :host {
@@ -109,7 +109,7 @@
                 flex-direction: row;
       }
 
-      gex-layout-manager {
+      rav-layout-manager {
         flex: 1;
         height: 100%;
       }
@@ -260,7 +260,7 @@
     <chips-api
       id="API"></chips-api>
 
-    <gex-panel
+    <rav-panel
       class="border-right"
       hidden$=[[!_isReady(dataStatusBch)]]
       on-is-open-changed="_panelIsOpenChanged">
@@ -303,7 +303,7 @@
               </template>
             </div>
         </div>
-    </gex-panel>
+    </rav-panel>
 
     <div class="content">
       <!-- global controls -->
@@ -316,7 +316,7 @@
 
       <!-- viewers container -->
       <div class="viewersContainer">
-        <gex-layout-manager
+        <rav-layout-manager
           active="[[active]]"
           layout="[[layout]]"
           fullscreen="[[fullscreen]]"
@@ -489,11 +489,11 @@
               on-dragleave="_onDragLeave"
               on-dragover="_onDragOver"></wc-viewer-2d>
 
-        </gex-layout-manager>
+        </rav-layout-manager>
       </div>
       </div>
     </div>
-    <gex-panel
+    <rav-panel
       class="border-left"
       size="large"
       hidden$="[[!_isSomethingActive(active)]]"
@@ -571,10 +571,10 @@
   </template>
 
   <script>
-    class GEXViewer extends CHIPSPluginBehavior(
+    class RAVViewer extends CHIPSPluginBehavior(
       Polymer.GestureEventListeners(Polymer.Element)) {
       static get is() {
-        return 'gex-viewer';
+        return 'rav-viewer';
       }
 
       static get properties() {
@@ -956,6 +956,6 @@
       }
     }
 
-    window.customElements.define(GEXViewer.is, GEXViewer);
+    window.customElements.define(RAVViewer.is, RAVViewer);
   </script>
 </dom-module>
