--- a/src/elements/rav-panel.html
+++ b/src/elements/rav-panel.html
@@ -7,9 +7,7 @@
 <!-- Paper components  -->
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 
-<!-- <link rel="import" href="../gex-icons.html"> -->
-
-<dom-module id="gex-panel">
+<dom-module id="rav-panel">
   <template>
     <style>
       :host {
@@ -56,9 +54,9 @@
   </template>
 
   <script>
-    class GexPanel extends Polymer.Element {
+    class RAVPanel extends Polymer.Element {
       static get is() {
-        return 'gex-panel';
+        return 'rav-panel';
       }
 
       static get properties() {
@@ -85,6 +83,6 @@
         this.set('isOpen', !this.isOpen);
       }
     }
-    window.customElements.define(GexPanel.is, GexPanel);
+    window.customElements.define(RAVPanel.is, RAVPanel);
   </script>
 </dom-module>
