Fix misc bugs and add 3x1 layout

--- a/src/elements/image-controls.html
+++ b/src/elements/image-controls.html
@@ -1,6 +1,9 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
 
+<!-- animation polyfill -->
+<link rel="import" href="../../bower_components/neon-animation/web-animations.html">
+
 <!-- Paper components -->
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
