--- a/src/elements/viewer-global-controls.html
+++ b/src/elements/viewer-global-controls.html
@@ -149,6 +149,7 @@
           <paper-icon-button icon="layout-icons:layout-2"></paper-icon-button>
           <paper-icon-button icon="layout-icons:layout-3"></paper-icon-button>
           <paper-icon-button icon="layout-icons:layout-4"></paper-icon-button>
+          <paper-icon-button icon="layout-icons:layout-5"></paper-icon-button>
         </iron-selector>
       </div>
 
