--- a/src/rav-library.html
+++ b/src/rav-library.html
@@ -1,6 +1,9 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
 
+<!-- animation polyfill -->
+<link rel="import" href="../bower_components/neon-animation/web-animations.html">
+
 <!-- app elements -->
 <link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
 <link rel="import" href="../bower_components/app-layout/app-header-layout/app-header-layout.html">
